added two  sections.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year Sale</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/header.css">
-</head>
-<body>
-    <Header>
-        <p>Happy New Year</p>
-        <h1>New Year Party Celebration</h1>
-    </Header>
-</body>
+    <!-- font links -->
+    <!-- Merriweather -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&family=Merriweather:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- css links -->
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/body-main-sections.css" />
+  </head>
+  <body>
+    <header>
+      <p>Happy New Year</p>
+      <h1>New Year Party Celebration</h1>
+    </header>
+    <main>
+      <section>
+        <div class="sec1">
+          <h1>65% OFF</h1>
+          <p>OUR HOLIDAY DEALS ARE BETTER</p>
+          <h3>ALL CATEGORIES</h3>
+          <img src="resources/New Year Photo.png" alt="Happy New Year image" />
+        </div>
+      </section>
+      <section>
+        <div class="sec2">
+          <div class="sec2content">
+            <h2>Welcome to midnight party</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <button>Join Now</button>
+          </div>
+          <img src="resources/Group 70.png" alt="Image 2024">
+        </div>
+      </section>
+      <section>
+        <div class="sec3"></div>
+      </section>
+      <section>
+        <div class="sec4"></div>
+      </section>
+      <section>
+        <div class="sec5"></div>
+      </section>
+      <section>
+        <div class="sec6"></div>
+      </section>
+      <section>
+        <div class="sec7"></div>
+      </section>
+    </main>
+  </body>
 </html>
