CSS name changed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <!-- css links -->
     <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/body-main-sections.css" />
+    <link rel="stylesheet" href="styles/upper-3-sections.css" />
   </head>
   <body>
     <header>
