half of section 5 added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- css links -->
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/upper-4-sections.css" />
-    <link rel="stylesheet" href="styles/lower-3-secetions.css" />
+    <link rel="stylesheet" href="styles/lower-3-sections.css" />
   </head>
   <body>
     <header>
@@ -88,7 +88,19 @@
       </section>
       <section>
         <div class="sec5">
-          
+          <div class="content">
+            <h6>WHAT IS FUNCTIONAL</h6>
+            <h1><span>Holidays</span> Sale 50%</h1>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod. Eleifend nunc purus quam id fermentum amet amet sit
+              consectetur.
+            </p>
+          </div>
+          <div class="images">
+
+          </div>
         </div>
       </section>
       <section>
