--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
             </p>
           </div>
           <div class="images">
-
+            <img class="image1" src="resources/Group 75.png" alt="">
+            <img class="image2" src="resources/Group 44.png" alt="">
+            <img class="image3" src="resources/Rectangle 1.png" alt="">
+            <img class="image4" src="resources/Rectangle 2.png" alt="">
           </div>
         </div>
       </section>
