--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/upper-4-sections.css" />
     <link rel="stylesheet" href="styles/lower-3-sections.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
   </head>
   <body>
     <header>
@@ -74,7 +75,10 @@
             </p>
           </div>
           <div class="part2">
-            <img src="resources/Ellipse 1.png" alt="" />
+            <img
+              src="resources/Ellipse 1.png"
+              alt="Image of Celebrating New Year"
+            />
           </div>
           <div class="part3">
             <h3>2024</h3>
@@ -82,7 +86,7 @@
               Dolor sit amet consectetur. Consequat eget consectetur maecenas
               sed.
             </p>
-            <img src="resources/Group 96.png" alt="" />
+            <img src="resources/Group 96.png" alt="Image 'Happy New Year'" />
           </div>
         </div>
       </section>
@@ -165,8 +169,52 @@
         </div>
       </section>
       <section>
-        <div class="sec7"></div>
+        <div class="sec7">
+          <img src="resources/Group 61.png" alt="Image of Letter" />
+          <h3>Subscribe Newsletter</h3>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <input type="email" placeholder="user@gmail.com" />
+          <input type="submit" value="Subscribe" />
+        </div>
       </section>
     </main>
+    <footer>
+      <div class="upper-section">
+        <div class="address">
+          <p>
+            44, Big Building Roosevelt Street<br />Beach Gardens Florida 33410
+          </p>
+        </div>
+        <div class="contact">
+          <div>
+            <img src="resources/Call.png" alt="Call Icon" />
+            <a href="#">+00 123 584 124</a>
+          </div>
+          <div>
+            <img src="resources/Website.png" alt="Web Icon" />
+            <a href="#">www.website.com</a>
+          </div>
+        </div>
+        <div class="contacts"></div>
+      </div>
+      <hr />
+      <div class="middle-section">
+        <a href="#"><img src="resources/Facebook.png" alt="Facebook Logo" /></a>
+        <a href="#"
+          ><img src="resources/Instagram.png" alt="Instagram Logo"
+        /></a>
+        <a href="#"><img src="resources/Twitter.png" alt="Twitter Logo" /></a>
+        <a href="#"><img src="resources/Linkedin.png" alt="Linkedin Logo" /></a>
+      </div>
+      <hr />
+      <dic class="last-section">
+        <p>2017, All Rights Reserved.</p>
+        <a href="#">Unsubscribe</a>
+      </dic>
+    </footer>
   </body>
 </html>
