--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
           <div class="sec2content">
             <h2>Welcome to midnight party</h2>
             <p>
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-              vel euismod.
+              Join us for an enchanting evening filled with laughter, dance, and unforgettable moments. Say goodbye to the old and welcome the New Year with joy and excitement. Join Now for a night of celebration and make memories that will last a lifetime!
             </p>
             <button>Join Now</button>
           </div>
@@ -66,12 +64,10 @@
       <section>
         <div class="sec4">
           <div class="part1">
-            <h6>NEW BEST OFFER</h6>
+            <h6>Discover Exclusive Deals!</h6>
             <h3>Coming Soon</h3>
             <p>
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-              vel euismod.
+              We're cooking up an incredible deal that you won't want to miss. Sign up for our newsletter to be the first in line when this unbeatable offer drops. Stay tuned for shopping excitement!"
             </p>
           </div>
           <div class="part2">
@@ -83,9 +79,7 @@
           <div class="part3">
             <h3>2024</h3>
             <p>
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed.
-            </p>
+              "Countdown to Savings! 🕒✨<br>Our exclusive deal is just around the corner. Stay tuned for the grand reveal and elevate your shopping experience. Unleash the savings and shop like never before!"</p>
             <img src="resources/Group 96.png" alt="Image 'Happy New Year'" />
           </div>
         </div>
@@ -93,13 +87,9 @@
       <section>
         <div class="sec5">
           <div class="content">
-            <h6>WHAT IS FUNCTIONAL</h6>
+            <h6>Explore the Festive Magic</h6>
             <h1><span>Holidays</span> Sale 50%</h1>
-            <p>
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-              vel euismod. Eleifend nunc purus quam id fermentum amet amet sit
-              consectetur.
+            <p>Experience the magic of the season with our Holidays Sale – a festive extravaganza of style and savings! Enjoy a dazzling array of products at an incredible 50% off. Shop now and make your celebrations extra special with the perfect gifts for your loved ones.
             </p>
           </div>
           <div class="images">
@@ -132,9 +122,7 @@
             <h6>THE BEST GIFTS</h6>
             <h3>Our Awesome Portfolio</h3>
             <p>
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-              vel euismod.
+              Discover a world of delight in our diverse and curated portfolio. From chic accessories to cutting-edge gadgets, we've got the best gifts for every taste. Unwrap the joy of giving with our premium selection, ensuring your loved ones receive nothing but the finest. Elevate your gift-giving game and create memorable moments with our awesome portfolio. The best is just a click away!
             </p>
           </div>
           <div class="portfolio-images">
@@ -173,9 +161,7 @@
           <img src="resources/Group 61.png" alt="Image of Letter" />
           <h3>Subscribe Newsletter</h3>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
+            "Subscribe to our newsletter for the latest trends, exclusive offers, and exciting updates. Be the first to know about sales, new arrivals, and special promotions. Elevate your shopping experience – join now for style, savings, and surprises!"
           </p>
           <input type="email" placeholder="user@gmail.com" />
           <input type="submit" value="Subscribe" />
@@ -189,17 +175,16 @@
             44, Big Building Roosevelt Street<br />Beach Gardens Florida 33410
           </p>
         </div>
-        <div class="contact">
+        <div class="contacts">
           <div>
-            <img src="resources/Call.png" alt="Call Icon" />
+            <a class="icon" href="#"><img src="resources/Call.png" alt="Call Icon" /></a>
             <a href="#">+00 123 584 124</a>
           </div>
           <div>
-            <img src="resources/Website.png" alt="Web Icon" />
+            <a class="icon" href="#"><img src="resources/Website.png" alt="Web Icon" />
             <a href="#">www.website.com</a>
           </div>
         </div>
-        <div class="contacts"></div>
       </div>
       <hr />
       <div class="middle-section">
@@ -212,7 +197,7 @@
       </div>
       <hr />
       <dic class="last-section">
-        <p>2017, All Rights Reserved.</p>
+        <p>&copy; 2017, All Rights Reserved.</p>
         <a href="#">Unsubscribe</a>
       </dic>
     </footer>
