--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           <div class="sec2content">
             <h2>Welcome to midnight party</h2>
             <p>
-              Join us for an enchanting evening filled with laughter, dance, and unforgettable moments. Say goodbye to the old and welcome the New Year with joy and excitement. Join Now for a night of celebration and make memories that will last a lifetime!
+              Join us for an enchanting evening filled with laughter, dance, and unforgettable moments. 
+              Say goodbye to the old and welcome the New Year with joy and excitement. 
+              Join Now for a night of celebration and make memories that will last a lifetime!
             </p>
             <button>Join Now</button>
           </div>
@@ -67,7 +69,9 @@
             <h6>Discover Exclusive Deals!</h6>
             <h3>Coming Soon</h3>
             <p>
-              We're cooking up an incredible deal that you won't want to miss. Sign up for our newsletter to be the first in line when this unbeatable offer drops. Stay tuned for shopping excitement!"
+              We're cooking up an incredible deal that you won't want to miss. 
+              Sign up for our newsletter to be the first in line when this unbeatable offer drops. 
+              Stay tuned for shopping excitement!"
             </p>
           </div>
           <div class="part2">
@@ -79,7 +83,9 @@
           <div class="part3">
             <h3>2024</h3>
             <p>
-              "Countdown to Savings! 🕒✨<br>Our exclusive deal is just around the corner. Stay tuned for the grand reveal and elevate your shopping experience. Unleash the savings and shop like never before!"</p>
+              "Countdown to Savings! 🕒✨<br>Our exclusive deal is just around the corner. 
+              Stay tuned for the grand reveal and elevate your shopping experience. 
+              Unleash the savings and shop like never before!"</p>
             <img src="resources/Group 96.png" alt="Image 'Happy New Year'" />
           </div>
         </div>
@@ -89,7 +95,9 @@
           <div class="content">
             <h6>Explore the Festive Magic</h6>
             <h1><span>Holidays</span> Sale 50%</h1>
-            <p>Experience the magic of the season with our Holidays Sale – a festive extravaganza of style and savings! Enjoy a dazzling array of products at an incredible 50% off. Shop now and make your celebrations extra special with the perfect gifts for your loved ones.
+            <p>Experience the magic of the season with our Holidays Sale – a festive extravaganza of style and savings! 
+              Enjoy a dazzling array of products at an incredible 50% off. 
+              Shop now and make your celebrations extra special with the perfect gifts for your loved ones.
             </p>
           </div>
           <div class="images">
@@ -119,10 +127,14 @@
       <section>
         <div class="sec6">
           <div class="portfolio">
-            <h6>THE BEST GIFTS</h6>
+            <h6>The Perfect Present Awaits You</h6>
             <h3>Our Awesome Portfolio</h3>
             <p>
-              Discover a world of delight in our diverse and curated portfolio. From chic accessories to cutting-edge gadgets, we've got the best gifts for every taste. Unwrap the joy of giving with our premium selection, ensuring your loved ones receive nothing but the finest. Elevate your gift-giving game and create memorable moments with our awesome portfolio. The best is just a click away!
+              Discover a world of delight in our diverse and curated portfolio. 
+              From chic accessories to cutting-edge gadgets, 
+              we've got the best gifts for every taste. Unwrap the joy of giving with our premium selection, 
+              ensuring your loved ones receive nothing but the finest. 
+              Elevate your gift-giving game and create memorable moments with our awesome portfolio. The best is just a click away!
             </p>
           </div>
           <div class="portfolio-images">
@@ -161,7 +173,9 @@
           <img src="resources/Group 61.png" alt="Image of Letter" />
           <h3>Subscribe Newsletter</h3>
           <p>
-            "Subscribe to our newsletter for the latest trends, exclusive offers, and exciting updates. Be the first to know about sales, new arrivals, and special promotions. Elevate your shopping experience – join now for style, savings, and surprises!"
+            "Subscribe to our newsletter for the latest trends, exclusive offers, 
+            and exciting updates. Be the first to know about sales, new arrivals, 
+            and special promotions. Elevate your shopping experience – join now for style, savings, and surprises!"
           </p>
           <input type="email" placeholder="user@gmail.com" />
           <input type="submit" value="Subscribe" />
